--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
