--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "@frontend/*": ["./src/app/*"]
     }
   },
   "include": [
