--- a/package.json
+++ b/package.json
@@ -15,13 +15,25 @@
   },
   "dependencies": {
     "@mantine/core": "^7.10.1",
+    "@mantine/form": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/tiptap": "^7.10.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.39.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-subscript": "^2.4.0",
+    "@tiptap/extension-superscript": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "geist": "^1.3.0",
