--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/govtech-dev-hub"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
 
 # Example:
 # SERVERVAR="foo"
