--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uiw/react-md-editor": "^4.0.4",
     "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "geist": "^1.3.0",
+    "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
     "postgres": "^3.4.4",
     "react": "^18.3.0",
