--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@frontend/*": ["./src/app/*"]
+      "@frontend/*": ["./src/app/*"],
+      "@css/*": ["./src/styles/*"]
     }
   },
   "include": [
