--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uploadthing/react": "^6.6.0",
     "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
@@ -44,6 +45,7 @@
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "uploadthing": "^6.12.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
