--- a/.env-e
+++ b/.env-e
@@ -2,7 +2,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/govtech-dev-hub"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/govtech-dev-hub"
 
 # Example:
 # SERVERVAR="foo"
