--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/govtech-dev-hub"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/govtech-dev-hub"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 CLERK_SECRET_KEY=""
 
