--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/form": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mantine/tiptap": "^7.10.1",
+    "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.39.0",
@@ -44,6 +45,7 @@
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
     "postgres": "^3.4.4",
+    "prisma": "^5.14.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
