--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "geist": "^1.3.0",
+    "luxon": "^3.4.4",
     "mantine-form-zod-resolver": "^1.1.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
