--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.0-beta.46",
     "@mantine/core": "^7.10.1",
+    "@mantine/dropzone": "^7.10.1",
     "@mantine/form": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@prisma/client": "^5.14.0",
@@ -27,6 +28,7 @@
     "@trpc/server": "next",
     "@uiw/react-md-editor": "^4.0.4",
     "@uploadthing/react": "^6.6.0",
+    "cloudinary": "^2.2.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
     "prisma": "^5.14.0",
