--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.0-beta.46",
+    "@hello-pangea/dnd": "^16.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/dropzone": "^7.10.1",
     "@mantine/form": "^7.10.1",
@@ -29,6 +30,7 @@
     "@uiw/react-md-editor": "^4.0.4",
     "@uploadthing/react": "^6.6.0",
     "cloudinary": "^2.2.0",
+    "clsx": "^2.1.1",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
     "prisma": "^5.14.0",
