--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
+    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -28,7 +24,6 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@uiw/react-md-editor": "^4.0.4",
-    "@uploadthing/react": "^6.6.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "markdown-to-jsx": "^7.4.7",
@@ -37,8 +32,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.4",
     "superjson": "^2.2.1",
-    "uploadthing": "^6.12.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
