--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uiw/react-md-editor": "^4.0.4",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
+    "luxon": "^3.4.4",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.2.1",
     "prisma": "^5.14.0",
